# pubstudio-builder

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .releaserc.cjs  README.md  jest.config.ts  jest.preset.ts  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest-migration-poc.md
.github/workflows/: pr-commit.yml  pr-merge-main.yml  pr-merge-prod.yml
backend/: .gitignore  Cargo.toml  Readme.md  limit-workspace.sh  pre-update.sh  run-docker.sh
backend/lib-shared-site-api/: Cargo.toml
backend/lib-shared-site-api/src/: lib.rs  log.rs
backend/lib-shared-site-api/src/auth/: generate_jwt.rs  mod.rs  types.rs  util.rs  verify_jwt.rs
backend/lib-shared-site-api/src/cache/: cache.rs  cache_helpers.rs  mod.rs
backend/lib-shared-site-api/src/clients/: s3_client.rs
backend/lib-shared-site-api/src/db/: db_error.rs  db_result.rs  mod.rs  separated.rs  sites_seed_data.rs  util.rs
backend/lib-shared-site-api/src/db/entity/: mod.rs  platform_site_entity.rs
backend/lib-shared-site-api/src/error/: api_error.rs  helpers.rs  mod.rs
backend/lib-shared-site-api/src/layer/: mod.rs  slack_layer.rs  worker.rs
backend/lib-shared-site-api/src/mail/: mail_params.rs  mod.rs  send_mail.rs
backend/lib-shared-site-api/src/util/: conversion.rs  domains.rs  get_site_html.rs  json_extractor.rs  log_format.rs  mod.rs
backend/lib-shared-site-api/src/validator/: mod.rs  site_data_len_validator.rs
backend/lib-shared-types/: Cargo.toml
backend/lib-shared-types/src/: constants.rs  lib.rs  type_util.rs
backend/lib-shared-types/src/cache/: mod.rs  site_data.rs  site_usage_data.rs
backend/lib-shared-types/src/domain/: mod.rs  site_defaults.rs
backend/lib-shared-types/src/dto/: mod.rs  query_dto.rs  sort_direction.rs  validate.rs
backend/lib-shared-types/src/dto/custom_data/: add_column_dto.rs  add_row_dto.rs  create_table_dto.rs  custom_data_dto.rs  custom_data_info_dto.rs  custom_data_info_viewmodel.rs  custom_event_dto.rs  delete_table_dto.rs  get_row_query.rs  list_rows_query.rs  list_tables_query.rs  mod.rs  modify_column_dto.rs  remove_column_dto.rs  remove_row_dto.rs  update_row_dto.rs  update_table_dto.rs
backend/lib-shared-types/src/dto/site_api/: create_backup_dto.rs  create_metadata_dto.rs  create_site_dto.rs  create_site_from_backup_dto.rs  custom_data_dto.rs  custom_metadata_viewmodel.rs  get_current_site_dto.rs  get_site_domains_dto.rs  get_site_dto.rs  get_site_version_dto.rs  mod.rs  publish_site_dto.rs  record_page_view_dto.rs  reset_all_dto.rs  site_info_viewmodel.rs  site_metadata_viewmodel.rs  site_usage_viewmodel.rs  site_viewmodel.rs  update_metadata_dto.rs  update_site_dto.rs  validate_domain_query.rs
backend/lib-shared-types/src/entity/: mod.rs
backend/lib-shared-types/src/entity/site_api/: backup_entity.rs  custom_domain_entity.rs  mod.rs  site_custom_data_info_entity.rs  site_entity.rs  site_info_entity.rs  site_metadata_entity.rs  site_usage_entity.rs
backend/lib-shared-types/src/error/: api_error.rs
backend/lib-shared-types/src/platform/: mod.rs  site_checkout_state.rs
backend/lib-shared-types/src/shared/: core.rs  js_date.rs  mod.rs  site.rs  site_asset.rs  user.rs
backend/site-api/: .env  Cargo.toml  Dockerfile  Dockerfile_dev  Readme.md  requests.http
backend/site-api/db/metadata/migrations/: 20230428144619_sites_metadata.sql  20230726112700_backups.sql  20230809162100_usage.sql  20230815092500_sites_metadata_add_site_type.sql  20230921135700_backups_remove_foreign_key.sql  20231024072300_sites_metadata_add_disabled.sql  20240118113105_sites_add_content_updated_at.sql  20240509122900_sites_metadata_add_custom_data_usage.sql  20240819190400_custom_domains_add_verified.sql  20250502105100_usage_public_request_count.sql
backend/site-api/db/sites/migrations/: 20230414104517_sites.sql  20231106111000_alter_site_versions_add_update_key.sql  20240118113105_sites_add_content_updated_at.sql  20240224222100_sites_add_preview_id.sql  20240314153500_custom_data_info.sql  20240611025500_sites_add_page_order.sql
backend/site-api/src/: api_context.rs  config.rs  cron.rs  lib.rs  main.rs
backend/site-api/src/app/: app_router.rs  mod.rs
backend/site-api/src/app/admin/: mod.rs  reset_all.rs
backend/site-api/src/app/backup/: backup_all.rs  backup_sites.rs  create_backup.rs  delete_backup.rs  helpers.rs  list_backups.rs  mod.rs  restore_backup.rs
backend/site-api/src/app/custom/: add_column.rs  add_row.rs  create_table.rs  custom_data.rs  delete_table.rs  get_row.rs  helpers.rs  list_rows.rs  list_tables.rs  mod.rs  modify_column.rs  remove_column.rs  remove_row.rs  trigger_table_events.rs  update_row.rs  update_table.rs  validate_row_data.rs
backend/site-api/src/app/health/: get_app_health.rs  mod.rs
backend/site-api/src/app/publish/: create_draft.rs  delete_draft.rs  mod.rs  publish_site.rs
backend/site-api/src/app/serve/: mod.rs  serve_web_site.rs
backend/site-api/src/app/site/: create_site.rs  create_site_from_backup.rs  delete_site.rs  get_current_site.rs  get_site.rs  get_site_domains.rs  get_site_head.rs  get_site_metadata.rs  get_site_usage.rs  get_site_version.rs  helpers.rs  list_site_versions.rs  list_sites.rs  mod.rs  record_page_view.rs  update_site.rs  update_site_metadata.rs  util.rs  validate_domain.rs
backend/site-api/src/app/usage/: helpers.rs  mod.rs  notify.rs  persist_cache.rs  persist_usage.rs  reset_cache.rs
backend/site-api/src/db/: backup_repo.rs  cache_helpers.rs  custom_data_info_repo.rs  custom_data_repo.rs  db_cache_layer.rs  mod.rs  site_db_pool_manager.rs  site_repo.rs  sites_metadata_repo.rs  usage_repo.rs
backend/site-api/src/middleware/: auth.rs
backend/site-api/src/util/: mail_helpers.rs  mod.rs
docs/: commit-format.md  contribution.md  events-inputs-behaviors.md  object-storage.md  renderer.md  site-data-format.md  tech-notes.md  text-editing.md  versioning.md
licenses/: prosemirror-mit.md
tools/: README.md  migrate-frontend-to-vitest.py  migrate-shared-to-vitest.py  tsconfig.tools.json  web-site.eslintrc.cjs  web-site.eslintrc.js  web.eslintrc.js
(+1981 files in other folders)
