[workspace]

members = [
    "site-api",
    "lib-shared-site-api",
    "lib-shared-types",
]

[workspace.dependencies]
lib-shared-site-api = { path = "./lib-shared-site-api" }
lib-shared-types = { path = "./lib-shared-types" }
aes = "0.8.4"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
const_format = "0.2.32"
lazy_static = "1.4.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.60"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.4"
rusty-s3 = "0.5.0"
tower = "0.4.13"
tracing-core = "0.1.32"
nu-ansi-term = "0.50.0"
moka = { version = "0.12.7", features = ["future"] }
file-rotate = "0.7.5"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
tokio-cron = "0.1.2"

[profile.dev]
opt-level = "z"
strip = true
