[workspace]

members = [
    "site-api",
    "lib-shared-site-api",
    "lib-shared-types",
]

[workspace.dependencies]
lib-shared-site-api = { path = "./lib-shared-site-api" }
lib-shared-types = { path = "./lib-shared-types" }
aes = "0.8.4"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive", "env"] }
const_format = "0.2.34"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_path_to_error = "0.1.16"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = "1.43.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3.10" }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
rusty-s3 = "0.7.0"
tower = "0.5.2"
tracing-core = "0.1.33"
nu-ansi-term = "0.50.1"
moka = { version = "0.12.10", features = ["future"] }
file-rotate = "0.7.6"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
tokio-cron = "0.1.3"

[profile.dev]
opt-level = "z"
strip = true
