[package]
name = "lib-shared-site-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_shared_site_api"
path = "src/lib.rs"

[dependencies]
lib-shared-types = { path = "../lib-shared-types" }
aes = "0.8.4"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.1"
base64 = "0.21.7"
cbc = { version = "0.1.2", features = ["std"] }
chrono = "0.4.34"
lazy_static = "1.4.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
tokio = "1.28.1"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = "0.16.1"
regex = "1.8.3"
rusty-s3 = "0.5.0"
tower = "0.4.13"
tracing-core = "0.1.32"
nu-ansi-term = "0.50.0"
moka = { version = "0.12.5", features = ["future"] }
file-rotate = "0.7.5"
urlencoding = "2.1.3"
