[package]
name = "lib-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_shared_types"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.8.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "time", "uuid", "chrono"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
validator = { version = "0.16.1", features = ["derive"] }
