[package]
name = "lib-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_shared_types"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "time", "uuid", "chrono"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.60"
validator = { version = "0.18.1", features = ["derive"] }
