[package]
name = "lib-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_shared_types"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "time", "uuid", "chrono"] }
strum = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
