[package]
name = "site-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-shared-site-api = { path = "../lib-shared-site-api" }
lib-shared-types = { path = "../lib-shared-types" }
axum = "0.7.4"
axum-extra = "0.9.2"
axum-macros = "0.4.1"
clap = { version = "4.5.1", features = ["derive", "env"] }
const_format = "0.2.32"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
tokio-cron = "0.1.2"
