[package]
name = "site-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-shared-site-api = { workspace = true }
lib-shared-types = { workspace = true }
async-trait = "0.1.85"
axum = { workspace = true }
axum-extra = "0.10.0"
axum-macros = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tracing = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
tokio-cron = { workspace = true }
